<resources>
    <string name="harmony_stride">与你同行</string>

    <string name="privacy_tip">隐私政策授权提示</string>
    <string name="tip">提示</string>
    <string name="tip_confirm">确定</string>
    <string name="privacy_agree">同意协议</string>
    <string name="privacy_disagree">放弃使用</string>

    <string name="account">账号</string>
    <string name="account_hint">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="verification_code_get">获取验证码</string>
    <string name="password">密码</string>
    <string name="password_hint">6-12数字或字母</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="password_remember">记住密码</string>
    <string name="password_forget">忘记密码</string>
    <string name="password_new">新密码</string>
    <string name="password_reset">重置密码</string>

    <string name="home">首页</string>
    <string name="top">回顶部</string>
    <string name="status">动态</string>
    <string name="message">消息</string>
    <string name="back">返回</string>
    <string name="edit">编辑</string>
    <string name="filter">筛选</string>
    <string name="search">搜索</string>
    <string name="search_hint">输入关键字</string>
    <string name="more">更多</string>
    <string name="close">关闭</string>
    <string name="sort">排序</string>

    <string name="profile">资料</string>
    <string name="certify">已认证</string>
    <string name="no_certify">未认证</string>
    <string name="logout">退出</string>

    <!--用户相关-->
    <string name="user">用户</string>
    <string name="certify_shortcut">认证</string>
    <string name="post_shortcut">发布</string>
    <string name="certify_unknown">未认证</string>
    <string name="certify_disabled">残疾人</string>
    <string name="certify_volunteer">志愿者</string>
    <string name="certify_employer">用人单位</string>
    <string name="certify_admin">管理员</string>
    <string name="gender_unknown">保密</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="location_unknown">未定位</string>
    <string name="introduction_default">系统原装签名：与你同行</string>
    <string name="profile_edit">修改资料</string>
    <string name="avatar_edit">点击修改头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="location">定位</string>
    <string name="introduction">签名</string>
    <string name="edit_confirm">提交</string>
    <string name="edit_cancel">取消</string>
    <string name="nickname_edit">修改昵称</string>
    <string name="nickname_edit_hint">输入新昵称</string>
    <string name="introduction_edit">修改签名</string>
    <string name="introduction_edit_hint">输入新签名</string>
    <string name="gender_edit">选择性别</string>

    <string name="focus">关注</string>
    <string name="focus_already">关注</string>
    <string name="chat">聊天</string>


    <!--图片相关-->
    <string name="take_photo">拍照</string>
    <string name="select_from_album">相册</string>

    <!--消息相关-->
    <string name="message_album">相册</string>
    <string name="message_camera">相机</string>
    <string name="message_position">位置</string>

    <!--认证相关-->
    <string name="user_certify">认证</string>
    <string name="certify_edit">选择认证类型</string>
    <string name="certify_type">类型</string>
    <string name="certify_number_edit">证件号</string>
    <string name="certify_number_edit_hint">输入证件号</string>
    <string name="certify_disabled_number">残疾证号</string>
    <string name="certify_volunteer_number">身份证号</string>
    <string name="certify_employer_number">信用代码</string>
    <string name="certify_admin_number">身份证号</string>
    <string name="certify_disabled_image">残疾证</string>
    <string name="certify_volunteer_image">身份证</string>
    <string name="certify_employer_image">营业执照</string>
    <string name="certify_admin_image">身份证</string>
    <string name="certify_status">当前状态</string>
    <string name="certify_status_agree">通过</string>
    <string name="certify_status_disagree">不通过</string>
    <string name="certify_status_reviewing">待审核</string>
    <string name="certify_info">审核意见</string>
    <string name="certify_info_default">审核中</string>

    <!--  帖子相关  -->
    <string name="post">帖子</string>
    <string name="content">帖子内容：xxxxxxxxxxxxxxxxxxxx</string>
    <string name="post_posting">发布帖子</string>
    <string name="post_post">发布</string>
    <string name="post_title_hint">标题（必填）</string>
    <string name="post_content">请输入发布内容</string>
    <string name="post_label">选择标签</string>
    <string name="post_label_all">全部</string>
    <string name="post_label_volunteer">志愿</string>
    <string name="post_label_job">求职</string>
    <string name="post_label_help">求助</string>
    <string name="post_label_recruitment">招聘</string>
    <string name="post_comment_count_default">0</string>
    <string name="post_setting">帖子设置</string>
    <string name="post_delete">删除帖子</string>
    <string name="post_null">帖子已删除</string>

    <!-- 评论相关 -->
    <string name="comment_hint">我有话要说</string>
    <string name="comment_all">全部评论</string>
    <string name="comment_owner">只看楼主</string>

    <!--  刷新相关  -->
    <string name="refresh_header_pulldown">下拉以刷新</string>
    <string name="refresh_header_refreshing">正在刷新</string>
    <string name="refresh_header_loading">正在加载</string>
    <string name="refresh_header_release">释放立即刷新</string>
    <string name="refresh_header_finish">刷新完成</string>

    <!--  加载相关  -->
    <string name="load_footer_pulling">上拉加载更多</string>
    <string name="load_footer_release">释放立即加载</string>
    <string name="load_footer_refreshing">正在刷新</string>
    <string name="load_footer_loading">正在加载</string>
    <string name="load_footer_finish">加载完成</string>

    <!--申请相关-->
    <string name="apply">申请</string>"
    <string name="apply_edit">新建申请</string>"
    <string name="apply_manage">管理申请</string>"
    <string name="apply_post_hint">申请帖子：</string>"
    <string name="apply_allow_true">开放申请</string>
    <string name="apply_allow_false">关闭申请</string>
    <string name="apply_find">查看申请列表</string>
    <string name="apply_reason_edit">申请理由</string>
    <string name="apply_reason_edit_hint">请输入申请理由</string>
    <string name="apply_status_yes">申请已通过</string>
    <string name="apply_status_no">申请待通过</string>
    <string name="apply_submit_yes">提交申请成功</string>
    <string name="apply_submit_no">不可重复申请</string>

    <!-- 设置相关 -->
    <string name="setting">设置</string>
    <string name="setting_account_hint">账号安全</string>
    <string name="setting_password_edit">修改密码</string>
    <string name="setting_account_delete">注销账号</string>
    <string name="setting_notification_hint">消息通知</string>
    <string name="setting_notification_system">订阅通知</string>
    <string name="setting_notification_unfocus">不接受未关注人私信</string>
    <string name="setting_privacy_hint">社交隐私</string>
    <string name="setting_privacy_all">个人主页访问权限</string>
    <string name="setting_privacy_post">在个人中心展示我发布的帖子</string>
    <string name="setting_privacy_apply">在个人中心展示我的申请</string>
    <string name="setting_privacy_comment">在个人中心展示我的评论</string>
    <string name="setting_post_hint">帖子设置</string>
    <string name="setting_post_allow_open">新帖子自动开放申请</string>
    <string name="setting_post_image_watermark">上传图片时添加水印</string>
    <string name="setting_logout">退出登录</string>


</resources>