<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <Button
        android:id="@+id/btn_select_from_album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen5"
        android:background="@drawable/selector_shape_button_white"
        android:textAppearance="@style/TitleAppearance"
        android:text="@string/select_from_album"/>

    <Button
        android:id="@+id/btn_take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/selector_shape_button_white"
        android:textAppearance="@style/TitleAppearance"
        android:text="@string/take_photo"/>

    <Button
        android:id="@+id/btn_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/dimen10"
        android:background="@drawable/selector_shape_button_white"
        android:textAppearance="@style/TitleAppearance"
        android:text="@string/edit_cancel"/>

</LinearLayout>