<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorToolbarGreyBackground"
    tools:context=".activity.SettingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tool_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/actionBarSize"
        app:navigationIcon="@drawable/close"
        android:background="@color/colorToolbarGreyBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="@style/TitleAppearance"
            android:text="@string/setting"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen20"
                android:paddingBottom="@dimen/dimen5"
                android:paddingHorizontal="@dimen/dimen10"
                android:text="@string/setting_account_hint"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen10"
                android:background="@drawable/shape_card"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tv_setting_password_edit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen50"
                    android:layout_marginHorizontal="@dimen/dimen10"
                    android:paddingHorizontal="@dimen/dimen10"
                    android:drawableEnd="@drawable/go"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance"
                    android:text="@string/setting_password_edit"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen1"
                    android:layout_marginHorizontal="@dimen/dimen10"
                    android:background="@color/colorDividingLine"/>
                <TextView
                    android:id="@+id/tv_setting_account_delete"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen50"
                    android:layout_marginHorizontal="@dimen/dimen10"
                    android:paddingHorizontal="@dimen/dimen10"
                    android:drawableEnd="@drawable/go"
                    android:gravity="center_vertical"
                    android:textAppearance="@style/TextAppearance"
                    android:text="@string/setting_account_delete"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen20"
                android:paddingBottom="@dimen/dimen5"
                android:paddingHorizontal="@dimen/dimen10"
                android:text="@string/setting_notification_hint"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen10"
                android:orientation="vertical"
                android:background="@drawable/shape_card">
                <Switch
                    android:id="@+id/sw_setting_notification_system"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen50"
                    android:paddingHorizontal="@dimen/dimen10"
                    android:background="@color/colorWhite"
                    android:textAppearance="@style/TextAppearance"
                    android:text="@string/setting_notification_system"
                    android:thumbTint="@color/selector_color_switch_thumb"
                    android:trackTint="@color/selector_color_switch_track"
                    android:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen1"
                    android:layout_marginHorizontal="@dimen/dimen10"
                    android:background="@color/colorDividingLine"/>
                <Switch
                    android:id="@+id/sw_setting_notification_unfocus"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen50"
                    android:paddingHorizontal="@dimen/dimen10"
                    android:textAppearance="@style/TextAppearance"
                    android:text="@string/setting_notification_unfocus"
                    android:thumbTint="@color/selector_color_switch_thumb"
                    android:trackTint="@color/selector_color_switch_track"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen20"
                android:paddingBottom="@dimen/dimen5"
                android:paddingHorizontal="@dimen/dimen10"
                android:text="@string/setting_privacy_hint"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen10"
                android:orientation="vertical"
                android:background="@drawable/shape_card">
                <Switch
                    android:id="@+id/sw_setting_privacy_all"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen50"
                    android:paddingHorizontal="@dimen/dimen10"
                    android:background="@color/colorWhite"
                    android:textAppearance="@style/TextAppearance"
                    android:text="@string/setting_privacy_all"
                    android:thumbTint="@color/selector_color_switch_thumb"
                    android:trackTint="@color/selector_color_switch_track"
                    android:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen1"
                    android:layout_marginHorizontal="@dimen/dimen10"
                    android:background="@color/colorDividingLine"/>
                <Switch
                    android:id="@+id/sw_setting_privacy_post"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen50"
                    android:paddingHorizontal="@dimen/dimen10"
                    android:textAppearance="@style/TextAppearance"
                    android:text="@string/setting_privacy_post"
                    android:thumbTint="@color/selector_color_switch_thumb"
                    android:trackTint="@color/selector_color_switch_track"
                    android:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen1"
                    android:layout_marginHorizontal="@dimen/dimen10"
                    android:background="@color/colorDividingLine"/>
                <Switch
                    android:id="@+id/sw_setting_privacy_apply"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen50"
                    android:paddingHorizontal="@dimen/dimen10"
                    android:textAppearance="@style/TextAppearance"
                    android:text="@string/setting_privacy_apply"
                    android:thumbTint="@color/selector_color_switch_thumb"
                    android:trackTint="@color/selector_color_switch_track"
                    android:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen1"
                    android:layout_marginHorizontal="@dimen/dimen10"
                    android:background="@color/colorDividingLine"/>
                <Switch
                    android:id="@+id/sw_setting_privacy_comment"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen50"
                    android:paddingHorizontal="@dimen/dimen10"
                    android:textAppearance="@style/TextAppearance"
                    android:text="@string/setting_privacy_comment"
                    android:thumbTint="@color/selector_color_switch_thumb"
                    android:trackTint="@color/selector_color_switch_track"
                    android:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/dimen20"
                android:paddingBottom="@dimen/dimen5"
                android:paddingHorizontal="@dimen/dimen10"
                android:text="@string/setting_privacy_hint"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen10"
                android:orientation="vertical"
                android:background="@drawable/shape_card">
                <Switch
                    android:id="@+id/sw_setting_post_allow_open"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen50"
                    android:paddingHorizontal="@dimen/dimen10"
                    android:background="@color/colorWhite"
                    android:textAppearance="@style/TextAppearance"
                    android:text="@string/setting_post_allow_open"
                    android:thumbTint="@color/selector_color_switch_thumb"
                    android:trackTint="@color/selector_color_switch_track"
                    android:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen1"
                    android:layout_marginHorizontal="@dimen/dimen10"
                    android:background="@color/colorDividingLine"/>
                <Switch
                    android:id="@+id/sw_setting_post_image_watermark"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen50"
                    android:paddingHorizontal="@dimen/dimen10"
                    android:textAppearance="@style/TextAppearance"
                    android:text="@string/setting_post_image_watermark"
                    android:thumbTint="@color/selector_color_switch_thumb"
                    android:trackTint="@color/selector_color_switch_track"
                    android:checked="true"
                    tools:ignore="UseSwitchCompatOrMaterialXml" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_setting_logout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen50"
                android:layout_marginHorizontal="@dimen/dimen10"
                android:layout_marginTop="@dimen/dimen10"
                android:layout_marginBottom="@dimen/dimen30"
                android:background="@drawable/shape_card"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance"
                android:text="@string/setting_logout"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>