<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="100dp"
    android:layout_marginHorizontal="@dimen/dimen30"
    android:background="@drawable/shape_dialog"
    android:padding="@dimen/dimen10">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen10"
        android:textAppearance="@style/TitleAppearance"
        android:text="@string/gender_edit"/>

    <RadioGroup
        android:id="@+id/rg_gender_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen30">
        <RadioButton
            android:id="@+id/rb_gender_unknown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen30"
            android:paddingVertical="@dimen/dimen10"
            android:textAppearance="@style/TextAppearance"
            android:text="@string/gender_unknown"/>
        <RadioButton
            android:id="@+id/rb_gender_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen30"
            android:paddingVertical="@dimen/dimen10"
            android:textAppearance="@style/TextAppearance"
            android:text="@string/gender_male"/>
        <RadioButton
            android:id="@+id/rb_gender_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/dimen30"
            android:paddingVertical="@dimen/dimen10"
            android:textAppearance="@style/TextAppearance"
            android:text="@string/gender_female"/>
    </RadioGroup>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_check_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/check_cancel"/>
        <ImageView
            android:id="@+id/iv_check_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen20"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/check_confirm"/>

    </LinearLayout>

</LinearLayout>